Clean backend structure - Fix Arabic encoding, images, and RBAC
Major Updates:
- Fixed Arabic text encoding (231 signs with correct UTF-8)
- Added all 251 traffic sign images in public/images/signs/
- Fixed RBAC implementation (@PreAuthorize annotations)
- Fixed JWT authentication and admin dashboard access
- Added static resource serving (WebConfig)
- Cleaned up temporary test files and scripts

Database Migrations:
- V44-V71: Image paths, Arabic encoding, and data reloading
- All migrations tested and verified

Security Fixes:
- Fixed SecurityConfigSecure rule ordering (permitAll before authenticated)
- Fixed AdminController @PreAuthorize syntax (SpEL quotes)
- Added DefaultAdminInitializer for admin account
- JWT filter working correctly

Image Organization:
- 9 categories: danger, priority, prohibition, mandatory, information, delineation, zone, additional, parking
- All images accessible via /images/signs/{category}/{filename}
- 33 simplified variant names (ZC5.png, TYPE-V.png, etc.)

Data Files:
- signs.json with correct Arabic text and full image paths
- category_descriptions.json, lessons_content.json
- multilingual_traffic_terms.json

Verified Working:
- Login/Register: HTTP 200 + JWT token
- Admin Dashboard: HTTP 200 with statistics
- All 251 images: HTTP 200
- All 231 signs: Correct Arabic text displayed

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>