@@ -1,6 +1,6 @@
 package com.readyroad.readyroadbackend.config;
 
-import jakarta.servlet.http.HttpServletResponse;
+import com.readyroad.readyroadbackend.config.JwtAuthenticationFilter;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -18,35 +18,31 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import jakarta.servlet.http.HttpServletResponse;
 import java.util.Arrays;
 import java.util.List;
 
 /**
- * Secure/Production Security Configuration
- *
- * Active when profile = "secure"
- * JWT authentication REQUIRED for protected endpoints
- *
- * Public endpoints (NO JWT required):
- * - /api/auth/** (register, login, health)
- * - /api/health
- * - /api/traffic-signs/**
- * - /api/search
- * - /actuator/health, /actuator/info
- * - /swagger-ui/**, /v3/api-docs/**
- *
- * Protected endpoints (JWT REQUIRED):
- * - /api/** (all other endpoints)
- *
+ * Security Configuration with RBAC
+ * 
+ * Implements Feature: ReadyRoad RBAC hardening and Admin tooling
+ * 
+ * Scenarios Covered:
+ * - Block non-admin users from admin endpoints (403)
+ * - Allow admin users to access admin endpoints (200)
+ * - Restrict traffic sign write operations to ADMIN
+ * - Restrict data import endpoints to ADMIN
+ * - Allow moderator and admin to access moderation endpoints
+ * - Preserve public endpoints without role checks
+ * 
  * @author ReadyRoad Team
- * @since 2026-01-18
- * @lastModified 2026-01-30 - Root cause fix: explicit method-level matchers + CORS in security chain
+ * @since 2026-02-04
  */
 @Configuration
 @EnableWebSecurity
-@EnableMethodSecurity
-@Profile("secure")
+@EnableMethodSecurity(prePostEnabled = true)
 @RequiredArgsConstructor
+@Profile("secure")
 public class SecurityConfigSecure {
 
     private final JwtAuthenticationFilter jwtAuthFilter;
@@ -55,78 +51,97 @@ public class SecurityConfigSecure {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                // Disable CSRF (stateless JWT)
                 .csrf(AbstractHttpConfigurer::disable)
-
-                // Enable CORS using the bean below
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
 
-                // Authorization rules (ORDER MATTERS: specific matchers BEFORE wildcards)
+                // ============================================
+                // RBAC Authorization Rules
+                // ============================================
                 .authorizeHttpRequests(auth -> auth
-                        // /api/auth/me requires JWT (must come BEFORE /api/auth/**)
+                        // Public auth endpoints - MUST come FIRST
+                        .requestMatchers("/api/auth/login", "/api/auth/register", "/api/auth/refresh", "/api/auth/health").permitAll()
+                        .requestMatchers(HttpMethod.POST, "/api/auth/login").permitAll()
+                        .requestMatchers(HttpMethod.POST, "/api/auth/register").permitAll()
+
+                        // Special case: /api/auth/me requires JWT (but no specific role)
                         .requestMatchers("/api/auth/me").authenticated()
 
-                        // Auth endpoints - ALL methods (GET, POST) - login, register, health
-                        .requestMatchers("/api/auth/**").permitAll()
+                        // ===== ADMIN-ONLY ENDPOINTS =====
+                        // Scenario: Block non-admin users from admin endpoints
+                        .requestMatchers("/api/admin/**").hasRole("ADMIN")
+                        .requestMatchers("/api/data-import/**").hasRole("ADMIN")
 
-                        // Public endpoints
+                        // ===== ADMIN-ONLY WRITE OPERATIONS ON TRAFFIC SIGNS =====
+                        // Scenario: Restrict traffic sign write operations to ADMIN
+                        .requestMatchers(HttpMethod.POST, "/api/traffic-signs/**").hasRole("ADMIN")
+                        .requestMatchers(HttpMethod.PUT, "/api/traffic-signs/**").hasRole("ADMIN")
+                        .requestMatchers(HttpMethod.DELETE, "/api/traffic-signs/**").hasRole("ADMIN")
+
+                        // ===== MODERATION ENDPOINTS (MODERATOR + ADMIN) =====
+                        // Scenario: Allow moderator and admin to access moderation endpoints
+                        .requestMatchers("/api/moderation/**").hasAnyRole("MODERATOR", "ADMIN")
+
+                        // ===== PUBLIC READ ENDPOINTS =====
+                        // Scenario: Preserve public endpoints without role checks
                         .requestMatchers(HttpMethod.GET, "/api/health").permitAll()
                         .requestMatchers(HttpMethod.GET, "/api/traffic-signs/**").permitAll()
                         .requestMatchers(HttpMethod.GET, "/api/search").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/categories/**").permitAll()
                         .requestMatchers(HttpMethod.GET, "/actuator/health").permitAll()
                         .requestMatchers(HttpMethod.GET, "/actuator/info").permitAll()
-                        .requestMatchers("/swagger-ui/**").permitAll()
-                        .requestMatchers("/swagger-ui.html").permitAll()
-                        .requestMatchers("/v3/api-docs/**").permitAll()
-                        .requestMatchers("/swagger-resources/**").permitAll()
-                        .requestMatchers("/webjars/**").permitAll()
 
-                        // Protected endpoints (require JWT)
+                        // Swagger/OpenAPI documentation
+                        .requestMatchers("/swagger-ui/**", "/v3/api-docs/**", "/swagger-resources/**").permitAll()
+
+                        // Static resources
+                        .requestMatchers("/images/**", "/static/**", "/public/**").permitAll()
+
+                        // ===== DEFAULT: All other /api/** require JWT (but no role check) =====
+                        // Scenario: Keep the rest of /api protected by JWT only
                         .requestMatchers("/api/**").authenticated()
 
-                        // Any other request
-                        .anyRequest().authenticated()
-                )
+                        // Catch-all: require authentication
+                        .anyRequest().authenticated())
 
-                // Exception handling
+                // ============================================
+                // Exception Handling (401 & 403)
+                // ============================================
                 .exceptionHandling(exception -> exception
+                        // 401 Unauthorized - No JWT or invalid JWT
                         .authenticationEntryPoint((request, response, authException) -> {
                             response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
                             response.setContentType("application/json");
                             response.getWriter().write(
                                     "{\"error\":\"Unauthorized\",\"message\":\"Authentication required\"}");
                         })
-                )
+                        // 403 Forbidden - JWT valid but insufficient role
+                        // Scenario: Response should indicate "Access Denied"
+                        .accessDeniedHandler((request, response, accessDeniedException) -> {
+                            response.setStatus(HttpServletResponse.SC_FORBIDDEN);
+                            response.setContentType("application/json");
+                            response.getWriter().write(
+                                    "{\"error\":\"Access Denied\",\"message\":\"Insufficient permissions\"}");
+                        }))
 
-                // Stateless session
                 .sessionManagement(session -> session
                         .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-
-                // Authentication provider
                 .authenticationProvider(authenticationProvider)
-
-                // JWT filter before UsernamePasswordAuthentication filter
                 .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
 
-    /**
-     * CORS configuration source integrated into the security filter chain.
-     * This replaces the separate CorsConfig bean to avoid filter ordering issues.
-     */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration config = new CorsConfiguration();
-        config.setAllowCredentials(true);
-        config.setAllowedOrigins(List.of("http://localhost:3000", "http://localhost:8081"));
-        config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept", "Origin",
-                "X-Requested-With"));
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-        config.setMaxAge(3600L);
+        CorsConfiguration configuration = new CorsConfiguration();
+        configuration.setAllowedOrigins(List.of("http://localhost:3000", "http://localhost:3001"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", config);
+        source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 }
